Add user auth with jwt
